--- a/assets/bootstrap-5.0.2/scss/_variables.scss
+++ b/assets/bootstrap-5.0.2/scss/_variables.scss
@@ -69,7 +69,7 @@ $colors: (
 // scss-docs-start theme-color-variables
 $primary: $blue !default;
 $secondary: #858b93 !default;
-$success: #00c7a3 !default;
+$success: #653fee !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
