--- a/assets/bootstrap-5.0.2/scss/bootstrap.css
+++ b/assets/bootstrap-5.0.2/scss/bootstrap.css
@@ -21,7 +21,7 @@
   --bs-gray-dark: #343a40;
   --bs-primary: #013eb7;
   --bs-secondary: #858b93;
-  --bs-success: #00c7a3;
+  --bs-success: #653fee;
   --bs-info: #4c84fa;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
@@ -2003,15 +2003,15 @@ progress {
 }
 
 .table-success {
-  --bs-table-bg: rgb(204, 243.8, 236.6);
-  --bs-table-striped-bg: rgb(193.8, 231.61, 224.77);
+  --bs-table-bg: rgb(224.2, 216.6, 251.6);
+  --bs-table-striped-bg: rgb(212.99, 205.77, 239.02);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: rgb(183.6, 219.42, 212.94);
+  --bs-table-active-bg: rgb(201.78, 194.94, 226.44);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: rgb(188.7, 225.515, 218.855);
+  --bs-table-hover-bg: rgb(207.385, 200.355, 232.73);
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: rgb(183.6, 219.42, 212.94);
+  border-color: rgb(201.78, 194.94, 226.44);
 }
 
 .table-info {
@@ -2733,7 +2733,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #00c7a3;
+  color: #653fee;
 }
 
 .valid-tooltip {
@@ -2745,8 +2745,8 @@ textarea.form-control-lg {
   padding: 1.25px 2.5px;
   margin-top: 0.1rem;
   font-size: 0.8125rem;
-  color: #000;
-  background-color: rgba(0, 199, 163, 0.9);
+  color: #fff;
+  background-color: rgba(101, 63, 238, 0.9);
   border-radius: 8px;
 }
 
@@ -2758,16 +2758,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #00c7a3;
+  border-color: #653fee;
   padding-right: calc(1.5em + 20px);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2300c7a3' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23653fee' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 5px) center;
   background-size: calc(0.75em + 10px) calc(0.75em + 10px);
 }
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #00c7a3;
-  box-shadow: 0 0 0 0.25rem rgba(0, 199, 163, 0.25);
+  border-color: #653fee;
+  box-shadow: 0 0 0 0.25rem rgba(101, 63, 238, 0.25);
 }
 
 .was-validated textarea.form-control:valid, textarea.form-control.is-valid {
@@ -2776,30 +2776,30 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
-  border-color: #00c7a3;
+  border-color: #653fee;
 }
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
   padding-right: 330px;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23555' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2300c7a3' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23555' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23653fee' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-position: right 60px center, center right 180px;
   background-size: 20px 20px, calc(0.75em + 10px) calc(0.75em + 10px);
 }
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
-  border-color: #00c7a3;
-  box-shadow: 0 0 0 0.25rem rgba(0, 199, 163, 0.25);
+  border-color: #653fee;
+  box-shadow: 0 0 0 0.25rem rgba(101, 63, 238, 0.25);
 }
 
 .was-validated .form-check-input:valid, .form-check-input.is-valid {
-  border-color: #00c7a3;
+  border-color: #653fee;
 }
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: #00c7a3;
+  background-color: #653fee;
 }
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
-  box-shadow: 0 0 0 0.25rem rgba(0, 199, 163, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(101, 63, 238, 0.25);
 }
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #00c7a3;
+  color: #653fee;
 }
 
 .form-check-inline .form-check-input ~ .valid-feedback {
@@ -3013,32 +3013,32 @@ textarea.form-control-lg {
 
 .btn-success {
   color: #fff;
-  background-color: #00c7a3;
-  border-color: #00c7a3;
+  background-color: #653fee;
+  border-color: #653fee;
 }
 .btn-success:hover {
-  color: #000;
-  background-color: rgb(0, 169.15, 138.55);
-  border-color: rgb(0, 159.2, 130.4);
+  color: #fff;
+  background-color: rgb(85.85, 53.55, 202.3);
+  border-color: rgb(80.8, 50.4, 190.4);
 }
 .btn-check:focus + .btn-success, .btn-success:focus {
-  color: #000;
-  background-color: rgb(0, 169.15, 138.55);
-  border-color: rgb(0, 159.2, 130.4);
-  box-shadow: 0 0 0 0.25rem rgba(38.25, 207.4, 176.8, 0.5);
+  color: #fff;
+  background-color: rgb(85.85, 53.55, 202.3);
+  border-color: rgb(80.8, 50.4, 190.4);
+  box-shadow: 0 0 0 0.25rem rgba(124.1, 91.8, 240.55, 0.5);
 }
 .btn-check:checked + .btn-success, .btn-check:active + .btn-success, .btn-success:active, .btn-success.active, .show > .btn-success.dropdown-toggle {
-  color: #000;
-  background-color: rgb(0, 159.2, 130.4);
-  border-color: rgb(0, 149.25, 122.25);
+  color: #fff;
+  background-color: rgb(80.8, 50.4, 190.4);
+  border-color: rgb(75.75, 47.25, 178.5);
 }
 .btn-check:checked + .btn-success:focus, .btn-check:active + .btn-success:focus, .btn-success:active:focus, .btn-success.active:focus, .show > .btn-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(38.25, 207.4, 176.8, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(124.1, 91.8, 240.55, 0.5);
 }
 .btn-success:disabled, .btn-success.disabled {
-  color: #000;
-  background-color: #00c7a3;
-  border-color: #00c7a3;
+  color: #fff;
+  background-color: #653fee;
+  border-color: #653fee;
 }
 
 .btn-info {
@@ -3242,27 +3242,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-success {
-  color: #00c7a3;
-  border-color: #00c7a3;
+  color: #653fee;
+  border-color: #653fee;
 }
 .btn-outline-success:hover {
-  color: #000;
-  background-color: #00c7a3;
-  border-color: #00c7a3;
+  color: #fff;
+  background-color: #653fee;
+  border-color: #653fee;
 }
 .btn-check:focus + .btn-outline-success, .btn-outline-success:focus {
-  box-shadow: 0 0 0 0.25rem rgba(0, 199, 163, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(101, 63, 238, 0.5);
 }
 .btn-check:checked + .btn-outline-success, .btn-check:active + .btn-outline-success, .btn-outline-success:active, .btn-outline-success.active, .btn-outline-success.dropdown-toggle.show {
-  color: #000;
-  background-color: #00c7a3;
-  border-color: #00c7a3;
+  color: #fff;
+  background-color: #653fee;
+  border-color: #653fee;
 }
 .btn-check:checked + .btn-outline-success:focus, .btn-check:active + .btn-outline-success:focus, .btn-outline-success:active:focus, .btn-outline-success.active:focus, .btn-outline-success.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(0, 199, 163, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(101, 63, 238, 0.5);
 }
 .btn-outline-success:disabled, .btn-outline-success.disabled {
-  color: #00c7a3;
+  color: #653fee;
   background-color: transparent;
 }
 
@@ -3411,9 +3411,9 @@ textarea.form-control-lg {
 
 .btn-sm, .btn-group-sm > .btn {
   height: 32px;
-  padding: 0 12px;
-  font-size: 0.8125rem;
+  padding: 0 10px;
   border-radius: 4px;
+  font-size: 13px;
 }
 
 .btn-outline-primary:hover {
@@ -4759,12 +4759,12 @@ textarea.form-control-lg {
 }
 
 .alert-success {
-  color: rgb(0, 119.4, 97.8);
-  background-color: rgb(204, 243.8, 236.6);
-  border-color: rgb(178.5, 238.2, 227.4);
+  color: rgb(60.6, 37.8, 142.8);
+  background-color: rgb(224.2, 216.6, 251.6);
+  border-color: rgb(208.8, 197.4, 249.9);
 }
 .alert-success .alert-link {
-  color: rgb(0, 95.52, 78.24);
+  color: rgb(48.48, 30.24, 114.24);
 }
 
 .alert-info {
@@ -5108,17 +5108,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-success {
-  color: rgb(0, 119.4, 97.8);
-  background-color: rgb(204, 243.8, 236.6);
+  color: rgb(60.6, 37.8, 142.8);
+  background-color: rgb(224.2, 216.6, 251.6);
 }
 .list-group-item-success.list-group-item-action:hover, .list-group-item-success.list-group-item-action:focus {
-  color: rgb(0, 119.4, 97.8);
-  background-color: rgb(183.6, 219.42, 212.94);
+  color: rgb(60.6, 37.8, 142.8);
+  background-color: rgb(201.78, 194.94, 226.44);
 }
 .list-group-item-success.list-group-item-action.active {
   color: #fff;
-  background-color: rgb(0, 119.4, 97.8);
-  border-color: rgb(0, 119.4, 97.8);
+  background-color: rgb(60.6, 37.8, 142.8);
+  border-color: rgb(60.6, 37.8, 142.8);
 }
 
 .list-group-item-info {
@@ -6152,10 +6152,10 @@ textarea.form-control-lg {
 }
 
 .link-success {
-  color: #00c7a3;
+  color: #653fee;
 }
 .link-success:hover, .link-success:focus {
-  color: rgb(51, 210.2, 181.4);
+  color: rgb(80.8, 50.4, 190.4);
 }
 
 .link-info {
@@ -6549,7 +6549,7 @@ textarea.form-control-lg {
 }
 
 .border-success {
-  border-color: #00c7a3 !important;
+  border-color: #653fee !important;
 }
 
 .border-info {
@@ -7642,7 +7642,7 @@ textarea.form-control-lg {
 }
 
 .text-success {
-  color: #00c7a3 !important;
+  color: #653fee !important;
 }
 
 .text-info {
@@ -7698,7 +7698,7 @@ textarea.form-control-lg {
 }
 
 .bg-success {
-  background-color: #00c7a3 !important;
+  background-color: #653fee !important;
 }
 
 .bg-info {
