--- a/assets/bootstrap-5.0.2/scss/bootstrap.css
+++ b/assets/bootstrap-5.0.2/scss/bootstrap.css
@@ -2927,6 +2927,11 @@ textarea.form-control-lg {
   white-space: nowrap;
   height: 46px;
 }
+@media (max-width: 1199.98px) {
+  .btn {
+    font-size: 16px;
+  }
+}
 @media (prefers-reduced-motion: reduce) {
   .btn {
     transition: none;
