--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -16052,7 +16052,7 @@ p {
   font-weight: 700;
 }
 .one-header-menu p {
-  margin-left: 60px;
+  margin-left: 30px;
 }
 .one-header-menu p > a {
   position: relative;
@@ -16292,7 +16292,7 @@ p {
 }
 .one-main-head {
   padding: 80px 0;
-  background: url(../images/main-bg.svg) no-repeat 50% 50%;
+  background: #007899 url(../images/main-bg.svg) no-repeat 50% 100%;
 }
 .one-main-quick {
   display: flex;
@@ -16326,6 +16326,7 @@ p {
 .one-main-quick-menu {
   display: flex;
   gap: 58px;
+  margin-right: 20px;
 }
 .one-main-quick-menu a {
   display: flex;
@@ -16349,21 +16350,95 @@ p {
 }
 .one-main-quick-menu a:hover .ico-CheckAll {
   background: url(../images/ico-CheckAll.svg) no-repeat 50% 50%;
+  background-size: cover;
 }
 .one-main-quick-menu a:hover .ico-LawBasics {
   background: url(../images/ico-LawBasics.svg) no-repeat 50% 50%;
+  background-size: cover;
 }
 .one-main-quick-menu a:hover .ico-RoleLaw {
   background: url(../images/ico-RoleLaw.svg) no-repeat 50% 50%;
+  background-size: cover;
 }
 .one-main-quick-menu a:hover .ico-Compliance {
   background: url(../images/ico-Compliance.svg) no-repeat 50% 50%;
+  background-size: cover;
 }
 .one-main-quick-menu a:hover .ico-LawUpdate {
   background: url(../images/ico-LawUpdate.svg) no-repeat 50% 50%;
+  background-size: cover;
 }
 .one-main-quick-menu a:hover .ico-Leadership {
   background: url(../images/ico-Leadership.svg) no-repeat 50% 50%;
+  background-size: cover;
+}
+.one-main-recommend {
+  position: relative;
+  display: flex;
+  gap: 55px;
+  padding: 70px 50px;
+  border-radius: 30px;
+  background: var(--04-bg-05-white-ffffff, #fff);
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.24);
+}
+.one-main-recommend__title {
+  position: relative;
+  min-width: 265px;
+}
+.one-main-recommend__title strong {
+  color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+  /* H30/B_40 */
+  font-family: Pretendard;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 133.333% */
+}
+.one-main-recommend__title p {
+  margin: 12px 0 0 0;
+  color: var(--02-text-02-gray-676767, #676767);
+  /* B16/M_24 */
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+}
+.one-main-recommend__nav {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 70px;
+}
+.one-main-recommend__nav .swiper-button-next,
+.one-main-recommend__nav .swiper-button-prev {
+  position: relative;
+  top: auto;
+  left: auto;
+  right: auto;
+  width: 42px;
+  height: 42px;
+  margin: 0;
+  background: url(../images/swiper-nav.svg) no-repeat 50% 50%;
+}
+.one-main-recommend__nav .swiper-button-next:hover,
+.one-main-recommend__nav .swiper-button-prev:hover {
+  background: url(../images/swiper-nav-active.svg) no-repeat 50% 50%;
+  transform: rotate(180deg);
+}
+.one-main-recommend__nav .swiper-button-next::after,
+.one-main-recommend__nav .swiper-button-prev::after {
+  display: none;
+}
+.one-main-recommend__nav .swiper-button-prev {
+  transform: rotate(180deg);
+}
+.one-main-recommend__nav .swiper-button-prev:hover {
+  transform: rotate(0);
+}
+.one-main-recommend-list {
+  width: 100%;
+  max-width: 780px;
 }
 .one-main-board {
   padding: 80px 0;
@@ -16399,7 +16474,7 @@ p {
 .one-main-board__title a {
   display: inline-flex;
   align-items: center;
-  margin-top: 72px;
+  margin-top: 94px;
   color: var(--02-text-03-gray-8-a-8-a-8-a, #8a8a8a);
   text-align: right;
   /* B16/B_24 */
@@ -16426,10 +16501,16 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 60px;
+  padding: 19px 60px;
   border-radius: 8px;
   border: 1px solid var(--06-border-01-gray-e-4-e-4-e-4, #e4e4e4);
   background: var(--04-bg-05-white-ffffff, #fff);
+  transition: all 0.1s ease;
+}
+.one-main-board__list a:hover {
+  border: 1px solid var(--06-border-04-focused-00-b-6-e-8, #00b6e8);
+  background: #fff;
+  box-shadow: 2px 3px 4px 0 rgba(0, 0, 0, 0.08);
 }
 .one-main-board__list a p {
   width: 480px;
@@ -16459,6 +16540,203 @@ p {
   font-style: normal;
   font-weight: 500;
   line-height: 24px; /* 150% */
+}
+@media (max-width: 1199.98px) {
+  .one-main-head {
+    padding: 40px 0;
+    background: #007899 url(../images/main-bg.svg) no-repeat 50% 100%;
+  }
+  .one-main-quick {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    padding: 30px;
+    border-radius: 30px;
+    background: var(--04-bg-05-white-ffffff, #fff);
+    box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.24);
+  }
+  .one-main-quick-title {
+    display: none;
+  }
+  .one-main-quick-menu {
+    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 28px;
+    margin-right: 0;
+  }
+  .one-main-quick-menu a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+  }
+  .one-main-quick-menu a p {
+    color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+    /* B14/B_22 */
+    font-family: Pretendard;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 22px; /* 157.143% */
+  }
+  .one-main-quick-menu a i {
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+  }
+  .one-main-quick-menu a:hover p {
+    color: var(--00-primary-02-blue-013-eb-7, #013eb7);
+  }
+  .one-main-recommend {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 30px 20px;
+    border-radius: 30px;
+    background: var(--04-bg-05-white-ffffff, #fff);
+    box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.24);
+  }
+  .one-main-recommend__title {
+    position: relative;
+    min-width: 265px;
+  }
+  .one-main-recommend__title strong {
+    color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+    /* H24/B_34 */
+    font-family: Pretendard;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 34px; /* 141.667% */
+  }
+  .one-main-recommend__title p {
+    margin: 12px 0 0 0;
+    color: var(--02-text-02-gray-676767, #676767);
+    /* B16/M_24 */
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+  }
+  .one-main-recommend__nav {
+    display: none;
+  }
+  .one-main-recommend-list {
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+  }
+  .one-main-recommend-list .swiper {
+    margin-right: -200px;
+  }
+  .one-main-board {
+    padding: 80px 0;
+    background: var(--04-bg-02-gray-f-6-f-5-f-5, #f6f5f5);
+  }
+  .one-main-board .one-contents {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .one-main-board:last-child {
+    background: var(--04-bg-01-gray-edebeb, #edebeb);
+  }
+  .one-main-board__title strong {
+    color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+    /* H24/B_34 */
+    font-family: Pretendard;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 34px; /* 141.667% */
+  }
+  .one-main-board__title p {
+    margin: 12px 0 0 0;
+    color: var(--02-text-02-gray-676767, #676767);
+    /* B16/M_24 */
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+  }
+  .one-main-board__title a {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 18px;
+    color: var(--02-text-03-gray-8-a-8-a-8-a, #8a8a8a);
+    text-align: right;
+    /* B16/B_24 */
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 150% */
+  }
+  .one-main-board__title a::after {
+    content: "";
+    display: block;
+    width: 28px;
+    height: 28px;
+    background: url(../images/ico-main-board-link.svg) no-repeat 50% 50%;
+  }
+  .one-main-board__list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    min-width: 100%;
+  }
+  .one-main-board__list a {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 12px;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid var(--06-border-01-gray-e-4-e-4-e-4, #e4e4e4);
+    background: var(--04-bg-05-white-ffffff, #fff);
+    transition: all 0.1s ease;
+  }
+  .one-main-board__list a:hover {
+    border: 1px solid var(--06-border-04-focused-00-b-6-e-8, #00b6e8);
+    background: #fff;
+    box-shadow: 2px 3px 4px 0 rgba(0, 0, 0, 0.08);
+  }
+  .one-main-board__list a p {
+    width: 100%;
+    min-width: 100%;
+    color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+    /* B16/M_24 */
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    display: -webkit-box;
+    overflow: hidden;
+    /* autoprefixer: ignore next */
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    max-height: 48px;
+  }
+  .one-main-board__list a span {
+    color: var(--02-text-03-gray-8-a-8-a-8-a, #8a8a8a);
+    text-align: right;
+    /* B16/M_24 */
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+  }
 }
 .one-login {
   width: 420px;
@@ -17192,8 +17470,42 @@ p {
     grid-template-columns: 1fr;
   }
 }
+.one-curriculum-list-item {
+  position: relative;
+}
+.one-curriculum-list-item__completed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 30;
+  background: rgba(0, 0, 0, 0.6);
+}
+.one-curriculum-list-item__completed > p {
+  display: flex;
+  width: 200px;
+  height: 77px;
+  padding: 4.274px 13.675px;
+  justify-content: center;
+  align-items: center;
+  gap: 8.547px;
+  flex-shrink: 0;
+  background: var(--01-secondary-03-yellow-f-4-bb-00, #f4bb00);
+  color: var(--00-primary-02-blue-013-eb-7, #013eb7) !important;
+  /* B12/B_20 */
+  font-family: Pretendard;
+  font-size: 12px !important;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px; /* 166.667% */
+}
 .one-curriculum-list-item__thumb {
   position: relative;
+  z-index: 20;
   width: 100%;
   height: 200px;
   flex-shrink: 0;
@@ -17228,7 +17540,9 @@ p {
   height: 100%;
 }
 .one-curriculum-list-item__title {
-  margin-bottom: 28px;
+  position: relative;
+  z-index: 20;
+  margin-bottom: 24px;
   color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
   /* B16/M_24 */
   font-family: Pretendard;
@@ -17244,6 +17558,8 @@ p {
   max-height: 48px;
 }
 .one-curriculum-list-item__foot {
+  position: relative;
+  z-index: 20;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -17285,6 +17601,17 @@ p {
   align-items: center;
   gap: 10px;
 }
+.one-curriculum-list-item__review strong {
+  margin-left: 2px;
+  color: var(--03-semantic-04-info-4-c-84-fa, #4c84fa) !important;
+  /* B12/B_20 */
+  font-family: Pretendard;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px; /* 166.667% */
+  text-decoration: underline !important;
+}
 .one-curriculum-list ~ .one-pagination {
   margin-top: 80px;
 }
@@ -17319,6 +17646,53 @@ p {
 }
 .one-score--05::before {
   width: 70px;
+}
+.one-score-lg {
+  position: relative;
+  display: inline-flex;
+  width: 200px;
+  height: 40px;
+  background: url(../images/star-lg.svg) repeat-x 0 0;
+}
+.one-score-lg::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  background: url(../images/star-lg-active.svg) repeat-x 0 0;
+}
+.one-score-lg--01::before {
+  width: 40px;
+}
+.one-score-lg--02::before {
+  width: 80px;
+}
+.one-score-lg--03::before {
+  width: 120px;
+}
+.one-score-lg--04::before {
+  width: 160px;
+}
+.one-score-lg--05::before {
+  width: 200px;
+}
+.one-score-button {
+  display: flex;
+}
+.one-score-button::after {
+  display: none;
+}
+.one-score-button button {
+  width: 40px;
+  height: 40px;
+  border: 0;
+  background: none;
+}
+.one-score-button button.active {
+  background: url(../images/star-lg-active.svg) repeat-x 0 0;
 }
 .one-detail-head {
   display: flex;
@@ -18976,6 +19350,71 @@ p {
     line-height: 24px; /* 150% */
   }
 }
+.one-modal-review-head {
+  display: flex;
+  margin-bottom: 30px;
+  padding: 30px 0;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: var(--04-bg-03-gray-f-4-f-4-f-5, #f4f4f5);
+}
+.one-modal-review-textarea {
+  margin-bottom: 12px;
+}
+.one-modal-review-textarea h5, .one-modal-review-textarea .h5 {
+  margin: 0 0 12px 0;
+  color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+  /* H20/B_30 */
+  font-family: Pretendard;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px; /* 150% */
+}
+.one-modal-review-textarea .form-control {
+  height: 120px;
+  padding: 10px;
+}
+.one-modal-review-textarea > span {
+  display: block;
+  width: 100%;
+  margin-top: 4px;
+  color: var(--02-text-05-gray-acacac, #acacac);
+  text-align: right;
+  /* B12/M_20 */
+  font-family: Pretendard;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 166.667% */
+}
+.one-modal-review-text ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.one-modal-review-text ul li {
+  position: relative;
+  margin: 0;
+  padding: 0 0 0 10px;
+  color: var(--02-text-02-gray-676767, #676767);
+  /* B14/M_22 */
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px; /* 157.143% */
+}
+.one-modal-review-text ul li::before {
+  content: "-";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 .active-menu {
   overflow: hidden;
@@ -18991,7 +19430,13 @@ p {
 }
 
 .modal-title {
-  height: 40px;
+  color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
+  /* H24/B_34 */
+  font-family: Pretendard;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 34px; /* 141.667% */
 }
 .modal-header {
   padding: 0 0 25px 0;
