--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -3186,8 +3186,15 @@ p {
             word-break: keep-all;
           }
           th {
-            padding-right: 4px;
+            padding-right: 20px;
             white-space: noWrap;
+            position: relative;
+            &::after {
+              content: ':';
+              position: absolute;
+              top: 0;
+              right: 8px;
+            }
           }
         }
         @include media-breakpoint-down(xl) {
