--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -3458,17 +3458,17 @@ html {
 }
 
 //alert
-.swal2 {
-  &-popup {
-    padding: 1rem 0 !important;
-  }
-  &-title {
-    font-size: 1.25rem !important;
-  }
-}
-.swal2-styled.swal2-confirm {
-  background-color: #4f80ff !important;
-}
+// .swal2 {
+//   &-popup {
+//     padding: 1rem 0 !important;
+//   }
+//   &-title {
+//     font-size: 1.25rem !important;
+//   }
+// }
+// .swal2-styled.swal2-confirm {
+//   background-color: #4f80ff !important;
+// }
 
 //component
 h1 {
