--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -46,6 +46,12 @@ p {
   height: 22px;
   background: url(../images/ico-bookmark.svg) no-repeat 50% 50%;
 }
+.ico-bookmark-active {
+  display: inline-flex;
+  width: 22px;
+  height: 22px;
+  background: url(../images/ico-bookmark-active.svg) no-repeat 50% 50%;
+}
 .ico-CheckAll {
   display: inline-flex;
   width: 50px;
@@ -155,12 +161,18 @@ p {
   height: 41px;
   background: url(../images/ico-Resume.svg) no-repeat 50% 50%;
 }
-
 .ico-like {
   display: inline-flex;
   width: 16px;
   height: 16px;
   background: url(../images/ico-like.svg) no-repeat 50% 50%;
+}
+
+.ico-like-active {
+  display: inline-flex;
+  width: 16px;
+  height: 16px;
+  background: url(../images/ico-like-active.svg) no-repeat 50% 50%;
 }
 
 .ico-reply {
@@ -199,6 +211,7 @@ p {
   &-header {
     height: 110px;
     border-bottom: 1px solid #e4e4e4;
+    z-index: 100;
     .one-contents {
       display: flex;
       align-items: center;
@@ -476,6 +489,27 @@ p {
     min-height: 622px;
     @include media-breakpoint-down(xl) {
       min-height: 400px;
+    }
+  }
+  &-none {
+    padding: 160px 0;
+    p {
+      margin: 0;
+      color: #666;
+      text-align: center;
+
+      /* B16/B_24 */
+      font-family: Pretendard;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 1.3;
+    }
+    @include media-breakpoint-down(xl) {
+      padding: 80px 0;
+      p {
+        font-size: 14px;
+      }
     }
   }
   &-main {
@@ -1669,6 +1703,26 @@ p {
     display: flex;
     gap: 4px;
     margin-bottom: 40px;
+    overflow: auto;
+    &::-webkit-scrollbar {
+      width: 12px; /* 스크롤바 영역 넓힘 */
+      height: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #fff;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #e1e1e1;
+      border-radius: 6px;
+      border: 4px solid transparent; /* thumb 자체는 8px처럼 보임 */
+      background-clip: content-box;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #afafaf;
+    }
     a {
       display: inline-flex;
       height: 36px;
@@ -1687,6 +1741,7 @@ p {
       font-style: normal;
       font-weight: 500;
       line-height: 20px; /* 153.846% */
+      white-space: noWrap;
       &.active {
         border-color: var(--08-gray-scale-02-black-2-e-3033, #2e3033);
         background: var(--08-gray-scale-02-black-2-e-3033, #2e3033);
@@ -3861,6 +3916,9 @@ p {
   }
   &-body {
     padding: 50px 20px;
+    img {
+      max-width: 100%;
+    }
     p {
       color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e);
       text-align: center;
@@ -3872,6 +3930,16 @@ p {
       font-weight: 700;
       line-height: 30px; /* 150% */
     }
+  }
+  &-editor {
+    color: var(--02-text-01-black-2-e-2-e-2-e, #2e2e2e) !important;
+
+    /* H20/B_30 */
+    font-family: Pretendard !important;
+    font-size: 20px !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    line-height: 30px !important; /* 150% */
   }
   &-footer {
     display: flex;
@@ -3970,5 +4038,77 @@ p {
     font-style: normal;
     font-weight: 700;
     line-height: 22px; /* 157.143% */
+  }
+}
+
+html {
+  .swal2-popup {
+    width: 320px;
+    border-radius: 16px;
+    padding: 24px;
+  }
+  .swal2-styled.swal2-confirm {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #2e3033;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 10px 30px;
+    font-size: 1rem;
+    border-radius: 8px;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    white-space: nowrap;
+    height: 46px;
+    color: #fff;
+    background-color: #2e3033;
+    border-color: #2e3033;
+  }
+  .swal2-title {
+    font-size: 24px;
+  }
+  .swal2-html-container {
+    font-size: 16px;
+    line-height: 1.3;
+  }
+  .swal2-styled.swal2-confirm:focus {
+    box-shadow: none;
+  }
+  /* 기본 줌 애니메이션 제거 + 페이드 인 */
+  .swal2-show {
+    animation: fadeIn 0.2s ease-out;
+  }
+
+  /* 닫힐 때 페이드 아웃 */
+  .swal2-hide {
+    animation: fadeOut 0.2s ease-in;
+  }
+
+  /* 페이드 인 키프레임 */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  /* 페이드 아웃 키프레임 */
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
   }
 }
