--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -19543,7 +19543,8 @@ p {
   font-size: 16px !important;
   font-style: normal !important;
   font-weight: 400 !important;
-  line-height: 1.3 !important; /* 150% */
+  line-height: 1.8 !important; /* 150% */
+  text-align: left;
   word-break: keep-all;
 }
 .modal-footer {
