--- a/layout/header.html
+++ b/layout/header.html
@@ -1,7 +1,12 @@
 <header class="one-header">
   <div class="one-contents">
     <a href="/pages/" class="one-header__logo">
-      <img src="../assets/images/logo.svg" alt="법무법인(유한) 태평양" />
+      <!-- <img src="../assets/images/logo.svg" alt="법무법인(유한) 태평양" /> -->
+      <img
+        src="../assets/images/logo-one.png"
+        alt="ONESNC (주)원에스앤씨"
+        class="logo-one"
+      />
     </a>
     <div class="one-header-menu">
       <a href="">교육과정</a>
