--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -1943,7 +1943,18 @@ p {
     width: 70px;
     height: 14px;
     background: url(../images/star.svg) repeat-x 0 0;
-    &::before {
+
+    &-value {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      background: url(../images/star-active.svg) repeat-x 0 0;
+    }
+    &:before {
       content: '';
       display: block;
       position: absolute;
